Add CI Build & Tests

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,9 +6,12 @@ charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+indent_style = space
 
 # 4 space indentation
 [*.py]
 not_skip = __init__.py
-indent_style = space
 indent_size = 4
+
+[*.{yaml,yml}]
+indent_size = 2
