--- a/setup.cfg
+++ b/setup.cfg
@@ -6,11 +6,13 @@ tag_name = {new_version}
 
 [bumpversion:file:flake8_meiqia/core.py]
 
+[flake8]
+exclude = .tox,.venv,build,dist,*.egg-info,*.egg
+
 [egg_info]
-tag_build = 
+tag_build =
 tag_date = 0
 tag_svn_revision = 0
 
 [wheel]
 universal = 1
-
