Porting python23 checks from OpenStack's hacking

--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,9 @@ envlist = py26,py27,py33,py34,py35,pypy,pypy3
 
 [testenv]
 deps =
-    coverage==3.7
+    coverage
     pytest
     flake8
-    pylama
-    pycodestyle>=2.0
 commands =
     coverage run -m pytest --capture=no --strict {posargs}
     coverage report -m
@@ -30,4 +28,3 @@ basepython = python3.4
 deps =
     flake8
 commands = flake8 {posargs} flake8_meiqia/
-
