--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py26,py27,py33,py34,py35,pypy,pypy3
 [testenv]
 deps =
     coverage
-    pytest
+    pytest<3.3.0
     flake8
 commands =
     coverage run -m pytest --capture=no --strict {posargs}
